# Cpp-NN

./: CMakeLists.txt  Network.hpp  README.md  Try.cc  converter.py
Tensor/: CMakeLists.txt  README.md  Schema.cpp  Schema.hpp  Tensor.cpp  Tensor.hpp  TensorIterator.cpp  TensorIterator.hpp  View.cpp  View.hpp
include/CppNN/: Tensor.hpp  nn.hpp
nn/: CMakeLists.txt  Conv1d.hpp  Linear.cxx  Linear.hpp  README.md  ReLU.hpp  Tanh.hpp  nn.hpp
